Fixed the overflowing body

--- a/type_master/type_master/static/css/index.css
+++ b/type_master/type_master/static/css/index.css
@@ -4,8 +4,8 @@
   font-style: normal;
   box-sizing: border-box;
 }
-html,body{
-    height: 100vh;
+html{
+    height: 100dvh;
     width: 100%;
 }
 body {
@@ -15,6 +15,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  margin: 0;
 }
   
 .paragraph {
